--- a/order-dev.yml
+++ b/order-dev.yml
@@ -8,6 +8,11 @@ spring:
     url: jdbc:mysql://119.23.215.194:3306/SpringCloud_Shell?useSSL=false&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
     username: root
     password: 1234
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   jpa:
     show-sql: true
 eureka:
